[package]
name = "vrc-media"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = [
    "font-kit",
    "wayland",
] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }


mpris = "2.1.0"
async-channel = "2.5.0"
futures = "0.3.32"
eyre = "0.6.12"
rosc = "0.11.4"
async-net = "2.0.0"
human-repr = "1.1.0"
async-io = "2.6.0"
futures-lite = "2.6.1"
